--- a/template/docker-compose.nginx.yml
+++ b/template/docker-compose.nginx.yml
@@ -60,7 +60,7 @@ services:
         restart: always
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
-            - /etc/timezone:/etc/timezone:ro
+            - /etc/localtime:/etc/localtime:ro
         environment:
             - WATCHTOWER_CLEANUP=true
             - WATCHTOWER_INCLUDE_RESTARTING=true
